==> Embedfire-emxgui/emXGUI_tutorial_code/H750_Pro开发板_Y/06-emXGUI推荐应用模版/User/bsp/touch/bsp_i2c_touch.c <==
#include "./touch/bsp_i2c_touch.h"
#include "./touch/bsp_touch_gtxx.h"
#include "./usart/bsp_usart.h"
#define I2C_Speed              400000
#define I2C_OWN_ADDRESS7      0x0A

void I2C_GTP_IRQEnable(void)
{
    GPIO_InitTypeDef GPIO_InitStructure; 

    /*开启按键GPIO口的时钟*/
    GTP_INT_GPIO_CLK_ENABLE();

    /* 选择中断引脚 */ 
    GPIO_InitStructure.Pin = GTP_INT_GPIO_PIN;
    /* 设置引脚为输入模式 */ 
    GPIO_InitStructure.Mode = GPIO_MODE_IT_RISING;	    		
    /* 设置引脚不上拉也不下拉 */
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    /* 使用上面的结构体初始化按键 */
    HAL_GPIO_Init(GTP_INT_GPIO_PORT, &GPIO_InitStructure); 
    /* 配置中断优先级 */
    HAL_NVIC_SetPriority(GTP_INT_EXTI_IRQ, 1, 1);
    /* 使能中断 */
    HAL_NVIC_EnableIRQ(GTP_INT_EXTI_IRQ);

}

void I2C_GTP_IRQDisable(void)
{
    GPIO_InitTypeDef GPIO_InitStructure; 

    /*开启按键GPIO口的时钟*/
    GTP_INT_GPIO_CLK_ENABLE();

    /* 选择中断引脚 */ 
    GPIO_InitStructure.Pin = GTP_INT_GPIO_PIN;
    /* 设置引脚为输入模式 */ 
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;	    		
    /* 设置引脚不上拉也不下拉 */
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    /* 使用上面的结构体初始化按键 */
    HAL_GPIO_Init(GTP_INT_GPIO_PORT, &GPIO_InitStructure); 
    /* 配置中断优先级 */
    HAL_NVIC_SetPriority(GTP_INT_EXTI_IRQ, 1, 1);
    /* 使能中断 */
    HAL_NVIC_DisableIRQ(GTP_INT_EXTI_IRQ);

}

static void I2C_GPIO_Config(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;  
   
  /*使能I2C时钟 */
  GTP_I2C_CLK_ENABLE();
  
  /*使能触摸屏使用的引脚的时钟*/
  GTP_I2C_SCL_GPIO_CLK_ENABLE();
  GTP_I2C_SDA_GPIO_CLK_ENABLE(); 

#if !(SOFT_IIC)   //使用硬件IIC 
    
  /*配置SDA引脚 */  

  GPIO_InitStructure.Pin = GTP_I2C_SCL_PIN;

  GPIO_InitStructure.Mode = GPIO_MODE_AF_OD;

  GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;

  GPIO_InitStructure.Pull  = GPIO_NOPULL;

  GPIO_InitStructure.Alternate = GTP_I2C_SCL_AF;

  HAL_GPIO_Init(GTP_I2C_SCL_GPIO_PORT, &GPIO_InitStructure);

  /*配置SCL引脚 */
  GPIO_InitStructure.Pin = GTP_I2C_SDA_PIN;
  HAL_GPIO_Init(GTP_I2C_SDA_GPIO_PORT, &GPIO_InitStructure);

#else  //使用软件IIC
    /*配置SCL引脚 */   
  GPIO_InitStructure.Pin = GTP_I2C_SCL_PIN;
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_OD;
  GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStructure.Pull  = GPIO_NOPULL;
  HAL_GPIO_Init(GTP_I2C_SCL_GPIO_PORT, &GPIO_InitStructure);

  /*配置SDA引脚 */
  GPIO_InitStructure.Pin = GTP_I2C_SDA_PIN;
  HAL_GPIO_Init(GTP_I2C_SCL_GPIO_PORT, &GPIO_InitStructure);
#endif
 
  /*配置RST引脚，下拉推挽输出 */   
  GPIO_InitStructure.Pin = GTP_RST_GPIO_PIN;
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStructure.Pull  = GPIO_PULLDOWN;
  HAL_GPIO_Init(GTP_RST_GPIO_PORT, &GPIO_InitStructure);
  
  /*配置 INT引脚，下拉推挽输出，方便初始化 */   
  GPIO_InitStructure.Pin =  GTP_INT_GPIO_PIN;
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	//设置为下拉，方便初始化
  GPIO_InitStructure.Pull  = GPIO_PULLDOWN;
  HAL_GPIO_Init(GTP_INT_GPIO_PORT, &GPIO_InitStructure);
}

void I2C_ResetChip(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/*配置 INT引脚，下拉推挽输出，方便初始化 */   
	GPIO_InitStructure.Pin = GTP_INT_GPIO_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pull  = GPIO_PULLDOWN;       //设置为下拉，方便初始化
	HAL_GPIO_Init(GTP_INT_GPIO_PORT, &GPIO_InitStructure);

	/*初始化GT9157,rst为高电平，int为低电平，则gt9157的设备地址被配置为0xBA*/

	/*复位为低电平，为初始化做准备*/
	HAL_GPIO_WritePin (GTP_RST_GPIO_PORT,GTP_RST_GPIO_PIN,GPIO_PIN_RESET);
	Delay(0x0FFFFF);

	/*拉高一段时间，进行初始化*/
	HAL_GPIO_WritePin (GTP_RST_GPIO_PORT,GTP_RST_GPIO_PIN,GPIO_PIN_SET);
	Delay(0x0FFFFF);

	  /*初始化GT9157,rst为高电平，int为低电平，则gt9157的设备地址被配置为0xBA*/

	/*复位为低电平，为初始化做准备*/
	HAL_GPIO_WritePin (GTP_RST_GPIO_PORT,GTP_RST_GPIO_PIN,GPIO_PIN_RESET);
	Delay(0x0FFFFF);

	/*拉高一段时间，进行初始化*/
	HAL_GPIO_WritePin (GTP_RST_GPIO_PORT,GTP_RST_GPIO_PIN,GPIO_PIN_SET);
	Delay(0x0FFFFF);

	/*把INT引脚设置为浮空输入模式，以便接收触摸中断信号*/
	GPIO_InitStructure.Pin = GTP_INT_GPIO_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pull  = GPIO_NOPULL;
	HAL_GPIO_Init(GTP_INT_GPIO_PORT, &GPIO_InitStructure);
}
